# dotfiles

./: .gitconfig  .gitignore  .gitmodules  .ideavimrc  .inputrc  .tmux.conf  .vimrc  .zprofile  .zshenv  .zshrc  Makefile  README.md  apache.zsh  docker.zsh  dyn.cfg  git.zsh  hexes.html  install.sh  link  magento.zsh  magento2.zsh  manage  manage.sh  packages.nix  packages.txt  toggle-theme  utilities.zsh
.config/: pavucontrol.ini
.config/autostart/: org.kde.polkit-kde-authentication-agent-1.desktop
.config/awesome/: rc.lua  rc.lua.bak  xrandr.lua
.config/broot/: conf.hjson
.config/discord/: settings.json
.config/dunst/: dunstrc
.config/kitty/: kitty.conf
.config/mako/: config
.config/nvim/: init.vim  snapshot.vim
.config/paru/: paru.conf
.config/qmk/: qmk.ini
.config/so/: config.yml
.config/sway/: config
.config/taffybar/: build  gruvbox-dark.css  gruvbox-light.css  my-taffybar.cabal  run  snapshot.yaml  stack.yaml  taffybar.css  taffybar.hs
.config/waybar/: config  style.css
.config/wofi/: style.css
.config/xmonad/: stack.yaml  xmobar.hs  xmonad.hs
.i3/: config
.scripts/: displays-toggle  low-battery-alert  toggle-theme  waybar-vpn  waybar-yubikey
.zsh-plugins/: git.zsh  magento.zsh  sunscreen.zsh  sunscreen.zsh.zwc  utilities.zsh  utilities.zsh.zwc
chunkwm/: .chunkwmrc
git/: .gitconfig
i3/: .i3status.conf
i3/.i3/: config
misc/: nix.conf  prep
skhd/: .skhdrc
spacemacs/: .spacemacs
tmux/: .tmux.conf
vim/: .vimrc
xinit/: .xinitrc  .xprofile
xmodmap/: .Xmodmap
zsh/: .zprofile  .zshrc
zsh-plugins/: utilities.zsh
(+72 files in other folders)
