name:                my-taffybar
version:             0.1.0.0
author:              sam
maintainer:          sam@sam.sam
build-type:          Simple
cabal-version:       >=1.10

executable taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-NA -i -ilib -fforce-recomp -main-is main -v0
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , gtk3
                     , taffybar
                     , X11>=1.8
  default-language:    Haskell2010
